# CrabEFI

./: .gitignore  AGENTS.md  Cargo.toml  README.md  coreboot-qemu-q35.defconfig  crabefi  flake.nix  x86_64-coreboot.ld
.cargo/: config.toml
.github/workflows/: ci.yml
.opencode/plans/: crabefi-project-plan.md
docs/: ARCHITECTURE.md  BUILDING.md  MEMORY.md  README.md
firmware/: coreboot-qemu-q35.rom.zst
scripts/: run-qemu-ahci.sh  run-qemu-usb.sh
src/: boot.rs  cfr_menu.rs  fb_log.rs  framebuffer_console.rs  heap.rs  lib.rs  logger.rs  main.rs  menu.rs  menu_common.rs  secure_boot_menu.rs  state.rs  time.rs
src/arch/x86_64/: cache.rs  entry.rs  idt.rs  mod.rs  paging.rs  port_regs.rs
src/bls/: entry.rs  mod.rs
src/coreboot/: cbmem_console.rs  cfr.rs  fmap.rs  framebuffer.rs  memory.rs  mod.rs  tables.rs
src/drivers/: block.rs  keyboard.rs  mmio.rs  mod.rs  serial.rs  storage.rs
src/drivers/ahci/: mod.rs
src/drivers/nvme/: mod.rs
src/drivers/pci/: access.rs  driver.rs  mod.rs
src/drivers/sdhci/: mod.rs  regs.rs
src/drivers/spi/: amd.rs  amd_chipsets.rs  intel.rs  intel_chipsets.rs  mod.rs  qemu.rs  regs.rs  sfdp.rs
src/drivers/usb/: controller.rs  ehci.rs  hid_keyboard.rs  mass_storage.rs  mod.rs  ohci.rs  uhci.rs  xhci.rs  xhci_regs.rs
src/efi/: allocator.rs  boot_services.rs  mod.rs  runtime_services.rs  system_table.rs  utils.rs
src/efi/auth/: authenticode.rs  boot.rs  crypto.rs  dbx_update.rs  enrollment.rs  key_files.rs  mod.rs  revocation.rs  signature.rs  structures.rs  time.rs  variables.rs
src/efi/protocols/: ata_pass_thru.rs  block_io.rs  console.rs  console_control.rs  context_map.rs  device_path.rs  disk_io.rs  graphics_output.rs  loaded_image.rs  memory_attribute.rs  mod.rs  nvme_pass_thru.rs  pass_thru_init.rs  scsi_pass_thru.rs  serial_io.rs  simple_file_system.rs  simple_text_input_ex.rs  storage_security.rs  unicode_collation.rs
src/efi/varstore/: deferred.rs  edk2.rs  mod.rs  persistence.rs  storage.rs
src/fs/: fat.rs  gpt.rs  iso9660.rs  mod.rs
src/grub/: mod.rs
src/linux_boot/: bzimage.rs  mod.rs  params.rs
src/payload/: elf.rs  mod.rs
src/pe/: mod.rs
test-apps/directory-test/: Cargo.toml
test-apps/directory-test/src/: main.rs
test-apps/hello/: Cargo.toml
test-apps/hello/src/: main.rs
test-apps/secure-boot-test/: Cargo.toml
test-apps/secure-boot-test/src/: main.rs
test-apps/storage-security-test/: Cargo.toml
test-apps/storage-security-test/src/: ata_passthru.rs  console.rs  efi_helpers.rs  main.rs  nvme_passthru.rs  scsi_passthru.rs  storage_security.rs  tcg_discovery.rs
xtask/: Cargo.toml
xtask/.cargo/: config.toml
xtask/src/: disk.rs  main.rs  qemu.rs  rom.rs
