# Note: xtask is NOT a workspace member because it needs different build settings
# Use `cargo xtask` to run it (alias defined in .cargo/config.toml)
# test-apps are also separate because they target x86_64-unknown-uefi

[package]
name = "crabefi"
version = "0.1.0"
edition = "2024"
authors = ["CrabEFI Contributors"]
description = "A minimal UEFI implementation as a coreboot payload"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/user/CrabEFI"
readme = "README.md"

[features]
default = []
# Enable logging output to framebuffer (very slow, for debugging only)
fb-log = []

[dependencies]
r-efi = "5.3"
log = "0.4"
bitflags = "2"
heapless = "0.8"
atomic_refcell = "0.1"
spin = "0.9"
tock-registers = "0.10"
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"

[build-dependencies]
cc = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[lib]
name = "crabefi"
path = "src/lib.rs"

[[bin]]
name = "crabefi"
path = "src/main.rs"
